fluent-syntax/test/fixtures_behavior/unknown_entry_start.ftl

8Foo = Foo
//~ ERROR E0002, pos 1
